fix: Change image

--- a/index.html
+++ b/index.html
@@ -24,16 +24,10 @@
 
     <link rel="stylesheet" href="https://ssuwat.com/css/screen.css">
   </head>
-  <body>
-    <div class="w-full h-screen max-w-screen-xl mx-auto bg--darker bg-cover bg-center bg-no-repeat" >
-    <div class="static h-screen bg-transparent text--lighter font-raleway lg:text-xl">
-      <div class="absolute h-64 w-full pin-b pin-l bg--lighter opacity-15"></div>
-      <div class="absolute h-64 w-full pin-b pin-l p-6">
+  <body class="flex items-center justify-center content-center">
+	<img src="https://ssuwat.com/images/ssuwat.svg" alt="Ssuwat Logo" class="w-32 h-32 rounded-full">
         <h1 class="mb-2 font-oswald text--lightest">SSUWAT</h1>
         <p>Play and Create.</p>
-
-      </div>
-      
     </div>
   </div>
     
