fix: Set height

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 </head>
-<body class="w-full h-full min-h-full flex items-center justify-center content-center">
+<body class="w-full h-full min-h-full flex flex-col items-center justify-center content-center">
 <img src="https://ssuwat.com/images/ssuwat.svg" alt="Ssuwat Logo" class="w-32 h-32 rounded-full">
 <h1 class="mb-2 font-oswald text--lightest">SSUWAT</h1>
 <p>Play and Create.</p>
