fix: Remove dot

--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
 <body class="w-full h-full min-h-full flex flex-col items-center justify-center content-center">
 <img src="https://ssuwat.com/images/ssuwat.svg" alt="Ssuwat Logo" class="w-32 h-32 rounded-full">
 <h1 class="mb-2 font-oswald text--lightest">SSUWAT</h1>
-<p>Play and Create.</p>
+<p>Play and Create</p>
 </body>
 </html>
